2011-11-28  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el: fix DEFCLASS and DEFINE-CONDITION superclass-list
	indentation.

	* slime-cl-indent-test.txt: Add tests 66 and 67.

2011-11-27  Helmut Eller  <heller@common-lisp.net>

	* slime-repl.el (slime-repl-choose-coding-system): New.
	(slime-repl-connected-hook-function): Use it.

2011-11-23  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-open-stream-to-lisp): Convert "utf-8-unix"
	to 'utf-8-unix.

2011-11-19  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el ("sbcl"): Add indentation alias for !def-debug-command.

2011-11-16  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-open-stream-to-lisp): Set the process coding system
	to the right coding system.

2011-11-12  Nikodemus Siivola  <nikodemus@random-state.net>

	Fix DEFMETHOD indentation when the name is a SETF-name, and qualifiers
	are present.

	* slime-cl-indent.el (lisp-beginning-of-defmethod-qualifiers): Renamed
	from `lisp-beginning-of-defmethod'. Skip the method name as well, since
	unlike qualifiers it can be list -- eg. (setf foo).
	(lisp-indent-defmethod): Use the above to get the number of skips right.

	* slime-cl-indent-test.txt: Tests 64 and 65.

2011-11-11  Anton Kovalenko  <anton@sw4me.com>

	* swank-fancy-inspector.lisp (make-pathname-ispec): Use :position
	instead of :charpos, according to slime-ed interface. Add :bytep
	t, telling slime-ed to interpret it as byte offset.

2011-10-31  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-run-indentation-tests): Make it
	possible to run only a specific test.

2011-10-31  Nikodemus Siivola  <nikodemus@random-state.net>

	Improve indentation of comments inside LOOP.

	* slime-cl-indent-test.txt: New tests 54-63.

	* slime-cl-indent.el (common-lisp-loop-type): Deal with comments
	at the start of the loop, add simple/split type.

	* slime-cl-indent.el (lisp-indent-loop): Use