@@ -706,3 +706,33 @@
      xoo)
   ()
   (:metaclass foo-class))
+
+
+;;; Test: 68
+;;
+;; lisp-loop-indent-subclauses: nil
+
+(progn
+  (loop
+    repeat 1000
+    do ;; This is the
+       ;; beginning
+       (foo))
+  (loop repeat 100 ;; This too
+                   ;; is a beginning
+        do (foo)))
+
+;;; Test: 69
+;;
+;; lisp-loop-indent-subclauses: t
+
+(progn
+  (loop
+    repeat 1000
+    do ;; This is the
+       ;; beginning
+       (foo))
+  (loop repeat 100 ;; This too
+                   ;; is a beginning
+        do (foo)))
+
